# predicate-combinators

./: .ghci  README  predicate-combinators.cabal
src/Data/Function/: Predicate.hs
